...
    LegalDocument(R.string.AboutSettings__tellomi_system_permissions, "https://www.tellomi.app/legal/permissions/"),
    LegalDocument(R.string.AboutSettings__tellomi_complaints_and_reports, "https://www.tellomi.app/legal/complaints/")
  )
}

object AboutSettingsTestTags {
  const val LIST = "about_settings_list"
  const val VERSION = "about_settings_version"
}

@Composable
fun AboutSettingsScreen(
  versionName: String,
...
